--- a/exercises/ex1-grounding-basics.ipynb
+++ b/exercises/ex1-grounding-basics.ipynb
@@ -65,9 +65,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8281c6ec",
+   "metadata": {},
+   "source": [
+    "> 💡 **Tip:**  \n",
+    "> Restart Kernel"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3c827aba",
+   "execution_count": null,
+   "id": "547bc1e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resource group is set to: AI167000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import init_env\n",
+    "import variables\n",
+    "\n",
+    "init_env.set_environment_variables()\n",
+    "\n",
+    "#assert variables.RESOURCE_GROUP=='', \"\"\"You should change the value assigned to the `RESOURCE_GROUP` in the `variables.py` file to your own resource group first!\"\"\"\n",
+    "print(f\"Resource group is set to: {variables.RESOURCE_GROUP}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bf17b658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,16 +109,8 @@
     "from gen_ai_hub.orchestration.models.document_grounding import DocumentGrounding, DocumentGroundingFilter\n",
     "from gen_ai_hub.orchestration.models.template import Template, TemplateValue\n",
     "from gen_ai_hub.orchestration.models.message import SystemMessage, UserMessage\n",
-    "from gen_ai_hub.orchestration.service import OrchestrationService"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf17b658",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from gen_ai_hub.orchestration.service import OrchestrationService\n",
+    "\n",
     "llm = LLM(\n",
     "    name=\"gemini-2.5-flash\",\n",
     "    parameters={\n",
@@ -111,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4cee90de",
    "metadata": {},
    "outputs": [],
@@ -135,15 +160,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "57564d83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To access the SAP AI Launchpad, you need to have the **required role collections assigned to your user**.\n",
+      "\n",
+      "This is mentioned as a prerequisite when configuring and using SAP AI Launchpad in conjunction with SAP AI Core.\n",
+      "\n",
+      "The other roles and IAM apps mentioned in the provided text (e.g., `S_ER9_11001966_QUICKCONFIG_TRAN`, `F7924_SUM_TRAN`, `F8552_TRAN`, `F8555_TRAN`, `SAP_CORE_BC_AIU_SUM_PC`, `SAP_CORE_BC_AIU_FIL_PC`, `SAP_CORE_BC_AIU_PER_PC`) are specific to enabling *generative AI features within SAP S/4HANA Cloud Public Edition* (like AI-assisted tax configuration, smart summarization, easy filter, or smart personalization) and are not for direct access to the SAP AI Launchpad application itself.\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib\n",
+    "variables = importlib.reload(variables)\n",
     "\n",
     "orchestration_service = OrchestrationService(\n",
-    "    api_url=\"https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com/v2/inference/deployments/d002ccdb23f8195c\",\n",
+    "    api_url=variables.AICORE_ORCHESTRATION_DEPLOYMENT_URL,\n",
     "    config=config\n",
     ")\n",
     "\n",
@@ -167,7 +205,7 @@
     "## Summary \n",
     ".....\n",
     "\n",
-    "Continue to - [Excercise 2: Ground your LLM with custom documents](../ex2/README.md)\n",
+    "Continue to - [Excercise 2: Ground your LLM with custom documents](ex2-1-vector-api.md)\n",
     "\n",
     "> 🟨 **TODO:**  \n",
     "> _Need to check whether use a direct Link to github.com._"
@@ -182,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".teched2025-AI167",
+   "display_name": "ai167env",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
