--- a/exercises/ex2-2-grounding-custom-documents.ipynb
+++ b/exercises/ex2-2-grounding-custom-documents.ipynb
@@ -44,10 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    " \n",
-    "logging.basicConfig(level=logging.NOTSET)\n",
-    "logging.getLogger(\"ai_core_sdk\").setLevel(logging.NOTSET)"
+    "\n",
+    "import init_env\n",
+    "import variables\n",
+    "\n",
+    "init_env.set_environment_variables()"
    ]
   },
   {
@@ -62,21 +63,18 @@
     "import base64\n",
     "\n",
     "#Get the Service Key and Instantiate AI API Client\n",
-    "aic_config_file = \"/Users/d054176/Downloads/aicore_service_key.json\"\n",
-    "with open(aic_config_file,'rb') as config:\n",
-    "    aic_config_file = json.load(config)\n",
-    "    config.close()\n",
+    "##aic_config_file = \"/Users/d054176/Downloads/aicore_service_key.json\"\n",
+    "#with open(aic_config_file,'rb') as config:\n",
+    " #   aic_config_file = json.load(config)\n",
+    "  #  config.close()\n",
     "\n",
-    "base_url = aic_config_file['serviceurls']['AI_API_URL']\n",
-    "client_id = aic_config_file['clientid']\n",
-    "client_secret = aic_config_file['clientsecret']\n",
-    "auth_url = aic_config_file['url']\n",
     "\n",
-    "client = AICoreV2Client (base_url=base_url+'/v2',\n",
-    "                         auth_url= auth_url+'/oauth/token',\n",
-    "                         client_id=client_id,\n",
-    "                         client_secret=client_secret,\n",
-    "                         resource_group=\"AI167000\"\n",
+    "\n",
+    "client = AICoreV2Client (base_url=os.environ[\"AICORE_BASE_URL\"]+'/v2',\n",
+    "                         auth_url= os.environ[\"AICORE_AUTH_URL\"],\n",
+    "                         client_id=os.environ[\"AICORE_CLIENT_ID\"],\n",
+    "                         client_secret=os.environ[\"AICORE_CLIENT_SECRET\"],\n",
+    "                         resource_group=os.environ[\"AICORE_RESOURCE_GROUP\"]\n",
     "                         )\n",
     "\n",
     "os_config_file = \"/Users/d054176/Downloads/objectstore_skey.json\"\n",
@@ -110,32 +108,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): ai167-000-s40ku9xc.authentication.eu10.hana.ondemand.com:443\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com/v2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:urllib3.connectionpool:https://ai167-000-s40ku9xc.authentication.eu10.hana.ondemand.com:443 \"POST /oauth/token HTTP/1.1\" 200 None\n",
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com:443\n",
-      "DEBUG:urllib3.connectionpool:https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com:443 \"POST /v2/admin/secrets HTTP/1.1\" 200 60\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com/v2\n",
       "<Response [200]>\n"
      ]
     }
@@ -213,10 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c24d81fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "Reference the Vector knowledge base using the pipeline ID: 4fa94134-4d5d-4cfc-90ef-047767d2ddf6\n"
+     ]
+    }
+   ],
    "source": [
     "from gen_ai_hub.proxy import get_proxy_client\n",
     "from gen_ai_hub.document_grounding.client import PipelineAPIClient\n",
@@ -237,13 +223,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8efdb940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lastStarted='' status='NEW'\n"
+     ]
+    }
+   ],
    "source": [
     "# check the status of the vectorization pipeline until it is completed\n",
     "print(pipeline_api_client.get_pipeline_status(response.pipelineId))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b7d7b673",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lastStarted='2025-09-29T15:22:10.000Z' status='FINISHED'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pipeline_api_client.get_pipeline_status('c3b0d2bf-d6f6-46aa-9924-69546e9d0454'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a64e32d",
+   "metadata": {},
+   "source": [
+    "* Retrieval \n",
+    "* Grounding Orchestration Layer\n",
+    "* \n",
+    "*"
    ]
   },
   {
@@ -258,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".teched2025-AI167",
+   "display_name": "ai167env",
    "language": "python",
    "name": "python3"
   },
@@ -272,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
