Change image syntax

--- a/exercises/ex2-get-started-with-grounding.ipynb
+++ b/exercises/ex2-get-started-with-grounding.ipynb
@@ -31,7 +31,9 @@
     "Therefore run the blow code and copy the URL and add into the variables.py add the respective place.\n",
     "<p>\n",
     "<img src=\"images/deployment_url.png\" alt=\"Visual Studio Code\" width=\"600\"/>\n",
-    "</p>"
+    "</p>\n",
+    "\n",
+    "![Deployment URL screenshot](images/deployment_url.png)\n"
    ]
   },
   {
