Added Exercise 3.3 Fixed typos.

--- a/exercises/ex2-get-started-with-grounding.ipynb
+++ b/exercises/ex2-get-started-with-grounding.ipynb
@@ -27,7 +27,7 @@
     "👀  In the ```TECHE2025-167/excercise/init_env.py``` the values from ```TECHED2025-AI167/.aicore-config.json``` are assigned to environmental variables. That way the **SAP Cloud SDK for AI(Python)** will connect to AI Core. \n",
     "\n",
     "## Add orchestration deployment URL to variables.py \n",
-    "👀  Before we can started, one final step is missing. You need to change the value assigened to the **AICORE_ORCHESTRATION_DEPLOYMENT_URL** in the ```variables.py``` to your own orchestration deployment URL.\n",
+    "👀  Before we can started, one final step is missing. You need to change the value assigned to the **AICORE_ORCHESTRATION_DEPLOYMENT_URL** in the ```variables.py``` to your own orchestration deployment URL.\n",
     "Therefore run the blow code and copy the URL and add into the variables.py add the respective place.\n",
     "<p>\n",
     "<img src=\"images/deployment_url.png\" alt=\"Visual Studio Code\" width=\"600\"/>\n",
@@ -167,7 +167,7 @@
    "source": [
     "template = Template(\n",
     "            messages=[\n",
-    "                SystemMessage(\"You are a helpful translation assistant.\"),\n",
+    "                SystemMessage(\"You are a helpful assistant.\"),\n",
     "                UserMessage(\"\"\"Answer the request by providing relevant answers that fit to the request.\n",
     "                Request: {{ ?user_query }}\n",
     "                \"\"\"),\n",
@@ -181,7 +181,7 @@
    "metadata": {},
    "source": [
     "### Create an orchestration configuration\n",
-    "Next you need to create the orchestration configuration by including the LLM we referencesd and the prompt template we just created."
+    "Next you need to create the orchestration configuration by including the LLM we referenced and the prompt template we just created."
    ]
   },
   {
@@ -269,7 +269,7 @@
     "\n",
     "template = Template(\n",
     "            messages=[\n",
-    "                SystemMessage(\"You are a helpful translation assistant.\"),\n",
+    "                SystemMessage(\"You are a helpful assistant.\"),\n",
     "                UserMessage(\"\"\"Answer the request by providing relevant answers that fit to the request.\n",
     "                Request: {{ ?user_query }}\n",
     "                Context:{{ ?grounding_response }}\n",
@@ -297,7 +297,8 @@
     "from gen_ai_hub.orchestration.models.document_grounding import DocumentGroundingFilter\n",
     "from gen_ai_hub.orchestration.models.document_grounding import GroundingModule\n",
     "from gen_ai_hub.orchestration.models.document_grounding import GroundingType\n",
-    "from gen_ai_hub.orchestration.models.document_grounding import DocumentGrounding"
+    "from gen_ai_hub.orchestration.models.document_grounding import DocumentGrounding\n",
+    "from gen_ai_hub.orchestration.models.document_grounding import DataRepositoryType"
    ]
   },
   {
@@ -306,9 +307,7 @@
    "metadata": {},
    "source": [
     "### Define data repository \n",
-    "We need to configure the Grounding Module, where we first define the data repository that we want to use via the **filter** parameter. \n",
-    "  \n",
-    "➡️ Add **\"help.sap.com\"** as the **data_repository_type** and run the statement. "
+    "We need to configure the Grounding Module, where we first define the data repository that we want to use via the **filter** parameter. \n"
    ]
   },
   {
@@ -320,7 +319,8 @@
    "source": [
     "\n",
     "filters = [\n",
-    "            DocumentGroundingFilter(id=\"SAPHelp\", data_repository_type=<data_repository_type>) # replace <data_repository_type> by \"help.sap.com\"\n",
+    "            DocumentGroundingFilter(    id=\"SAPHelp\", \n",
+    "                                        data_repository_type=DataRepositoryType.URL.value) # replace <data_repository_type> by \"help.sap.com\"\n",
     "        ]\n"
    ]
   },
@@ -356,7 +356,7 @@
    "source": [
     "### Create Orchestration Configuration \n",
     "\n",
-    "Grounding configuration ```grounding_config``` is now an addidional parameter that we add to the Orchestration configuration. "
+    "Grounding configuration ```grounding_config``` is now an additional parameter that we add to the Orchestration configuration. "
    ]
   },
   {
@@ -427,10 +427,10 @@
     "## Summary \n",
     "You learned the basic grounding concepts in SAP AI Core and how you to use it improve the retrieval.\n",
     "\n",
-    "In the next execercise you will learn on how to injest custom documents. \n",
+    "In the next exercise you will learn on how to ingest custom documents. \n",
     "\n",
     "\n",
-    "Continue to - [Excercise 3: Ground your LLM with custom documents](ex3-1-grounding-vector-api.md)\n"
+    "Continue to - [Exercise 3: Ground your LLM with custom documents](ex3-1-grounding-vector-api.md)\n"
    ]
   }
  ],
