--- a/exercises/ex3-3-grounding-data-pipeline.ipynb
+++ b/exercises/ex3-3-grounding-data-pipeline.ipynb
@@ -9,16 +9,11 @@
     "\n",
     "Instead of doing all the steps by yourself, as it was shown in the previous exercise, you can also leverage the pipeline API.\n",
     "\n",
-    "The pipeline collects documents and segments the data into chunks. It generates embeddings, shich are multidimensional representations of textual information, and stores them efficiently in the vector database.\n",
+    "The pipeline collects documents and segments the data into chunks. It generates embeddings, which are multidimensional representations of textual information, and stores them efficiently in the vector database.\n",
     "\n",
     "In this Exercise you will do the following steps:\n",
-    "* Perform initial one time admin tasks \n",
-    "    1. Create a generic secret \n",
-    "    2. Upload data to your object store\n",
-    "* Prepare Vector knowlegde Base\n",
-    "    1. Configure Pipeline API to read files from the object store and store it in the vector database. \n",
-    "\n",
-    "Pipeline API "
+    "* Perform initial one time admin tasks: Create a generic secret \n",
+    "* Prepare Vector knowledge Base: Configure Pipeline API to read files from the object store and store it in the vector database. \n"
    ]
   },
   {
@@ -28,59 +23,18 @@
    "source": [
     "## Create a generic secret for Object Store \n",
     "\n",
-    "Before you can prepare your data for the Pipeline API, you must create a generic secret at the resource group level. Secrets are a means of allowing and controlling connections accross directions and tools, without compromising your credentials."
+    "We first must create a generic secret at the resource group level. Secrets are a means of allowing and controlling connections across directions and tools, without compromising your credentials."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "30e7b1ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import init_env\n",
-    "import variables\n",
-    "\n",
     "init_env.set_environment_variables()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e8c7e012",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ai_core_sdk.ai_core_v2_client import AICoreV2Client\n",
-    "import os, json\n",
-    "import base64\n",
-    "\n",
-    "#Get the Service Key and Instantiate AI API Client\n",
-    "##aic_config_file = \"/Users/d054176/Downloads/aicore_service_key.json\"\n",
-    "#with open(aic_config_file,'rb') as config:\n",
-    " #   aic_config_file = json.load(config)\n",
-    "  #  config.close()\n",
-    "\n",
-    "\n",
-    "\n",
-    "client = AICoreV2Client (base_url=os.environ[\"AICORE_BASE_URL\"]+'/v2',\n",
-    "                         auth_url= os.environ[\"AICORE_AUTH_URL\"],\n",
-    "                         client_id=os.environ[\"AICORE_CLIENT_ID\"],\n",
-    "                         client_secret=os.environ[\"AICORE_CLIENT_SECRET\"],\n",
-    "                         resource_group=os.environ[\"AICORE_RESOURCE_GROUP\"]\n",
-    "                         )\n",
-    "\n",
-    "os_config_file = \"/Users/d054176/Downloads/objectstore_skey.json\"\n",
-    "with open(os_config_file,'rb') as config:\n",
-    "    os_config_file = json.load(config)\n",
-    "    config.close()\n",
-    "\n",
-    "access_key = os_config_file['access_key_id']\n",
-    "secret = os_config_file['secret_access_key']\n",
-    "bucket = os_config_file['bucket']\n",
-    "uri = os_config_file['uri']\n",
-    "user = os_config_file['username']"
    ]
   },
   {
@@ -92,7 +46,7 @@
     "\n",
     "**Note**: \n",
     "* Every value in the *data* dictionary needs to be base64-encoded. \n",
-    "* lables need to contain key-value pair *\"ext.ai.sap.com/document-grounding\"* and *\"ext.ai.sap.com/documentRepositoryType\"* with value S3. This is needed to enable grounding and declair S3 as the repository source. "
+    "* labels need to contain key-value pair *\"ext.ai.sap.com/document-grounding\"* and *\"ext.ai.sap.com/documentRepositoryType\"* with value S3. This is needed to enable grounding and declare S3 as the repository source. "
    ]
   },
   {
@@ -100,20 +54,21 @@
    "execution_count": null,
    "id": "a3a7bf55",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com/v2\n",
-      "<Response [200]>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import base64\n",
     "\n",
     "def b64(val):\n",
-    "     return base64.b64encode(val.encode(\"utf-8\")).decode(\"utf-8\")\n",
+    "     return base64.b64encode(val.encode(\"utf-8\")).decode(\"utf-8\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a79d69ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def secret_dict():\n",
     "        return {\n",
@@ -122,12 +77,12 @@
     "            \"url\": b64(\"https://s3-eu-central-1.amazonaws.com\"),\n",
     "            \"authentication\": b64(\"NoAuthentication\"),\n",
     "            \"description\": b64(\"For Grounding\"),\n",
-    "            \"access_key_id\": b64(access_key),\n",
-    "            \"bucket\": b64(bucket),\n",
+    "            \"access_key_id\": b64(os.environ[\"ACCESS_KEY_ID\"]),\n",
+    "            \"bucket\": b64(os.environ[\"BUCKET\"]),\n",
     "            \"host\": b64(\"s3-eu-central-1.amazonaws.com\"),\n",
     "            \"region\": b64(\"eu-central-1\"), \n",
-    "            \"secret_access_key\": b64(secret),\n",
-    "            \"username\": b64(user)            \n",
+    "            \"secret_access_key\": b64(os.environ[\"SECRET\"]),\n",
+    "            \"username\": b64(os.environ[\"USER\"])            \n",
     "            },\n",
     "            \"labels\": [\n",
     "                {\n",
@@ -145,9 +100,34 @@
     "    'name': secret_dict()['name'],\n",
     "    'data': secret_dict()['data'],\n",
     "    'labels': secret_dict()['labels']\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64d5e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ai_core_sdk.ai_core_v2_client import AICoreV2Client\n",
+    "import os\n",
     "\n",
-    "print(client.rest_client.base_url)\n",
+    "client = AICoreV2Client (base_url=os.environ[\"AICORE_BASE_URL\"]+'/v2',\n",
+    "                         auth_url= os.environ[\"AICORE_AUTH_URL\"],\n",
+    "                         client_id=os.environ[\"AICORE_CLIENT_ID\"],\n",
+    "                         client_secret=os.environ[\"AICORE_CLIENT_SECRET\"],\n",
+    "                         resource_group=os.environ[\"AICORE_RESOURCE_GROUP\"]\n",
+    "                         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ababc78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests\n",
     "\n",
     "response_dict = requests.post(\n",
@@ -165,111 +145,280 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1c5288",
-   "metadata": {},
-   "source": [
-    "#### Upload files to your S3 bucket\n",
-    "\n",
-    "Via Bruno -- Set up already done in the getting started stuff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cf046922",
    "metadata": {},
    "source": [
-    "#### Create Data Pipeline"
+    "## Create Data Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c24d81fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "None\n",
-      "Reference the Vector knowledge base using the pipeline ID: 4fa94134-4d5d-4cfc-90ef-047767d2ddf6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gen_ai_hub.proxy import get_proxy_client\n",
     "from gen_ai_hub.document_grounding.client import PipelineAPIClient\n",
-    "from gen_ai_hub.document_grounding.models.pipeline import S3PipelineCreateRequest, CommonConfiguration\n",
+    "from gen_ai_hub.document_grounding.models.pipeline import S3PipelineCreateRequest, CommonConfiguration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38ef6236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "aicore_client = get_proxy_client();\n",
-    "print(aicore_client.resource_group) \n",
-    "print(aicore_client.base_url)\n",
-    "\n",
-    "pipeline_api_client = PipelineAPIClient(aicore_client)\n",
+    "pipeline_api_client = PipelineAPIClient(aicore_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e230be4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "generic_secret_s3_bucket = \"aws3-secret-3\"\n",
-    "s3_config = S3PipelineCreateRequest(configuration= CommonConfiguration(destination=generic_secret_s3_bucket))\n",
-    "response = pipeline_api_client.create_pipeline(s3_config)\n",
+    "s3_config = S3PipelineCreateRequest(configuration= CommonConfiguration(destination=generic_secret_s3_bucket))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa1a003e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "response = pipeline_api_client.create_pipeline(s3_config)\n",
     "print(f\"Reference the Vector knowledge base using the pipeline ID: {response.pipelineId}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8efdb940",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lastStarted='' status='NEW'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check the status of the vectorization pipeline until it is completed\n",
     "print(pipeline_api_client.get_pipeline_status(response.pipelineId))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8ed0961",
+   "metadata": {},
+   "source": [
+    "Once the status switched to ```'FINISHED'``` the vectorization is completed and we can continue with the next steps. Our PDF is vectorized and stored in the HANA Vector Store. \n",
+    "\n",
+    "If you want to see all pipelines you can run ```get_pipelines()``` this will list all the pipelines in your resource group. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b7d7b673",
+   "execution_count": null,
+   "id": "da0e02d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lastStarted='2025-09-29T15:22:10.000Z' status='FINISHED'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(pipeline_api_client.get_pipeline_status('c3b0d2bf-d6f6-46aa-9924-69546e9d0454'))"
+    "print(pipeline_api_client.get_pipelines())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a64e32d",
+   "id": "98fbc9c7",
    "metadata": {},
    "source": [
-    "* Retrieval \n",
-    "* Grounding Orchestration Layer\n",
-    "* \n",
-    "*"
+    "🎉 Congratulations you successfully created you first data repository via the pipeline API .🎉  \n",
+    "Now let us use this data repository to generate more accurate responses. \n",
+    "You will use again the Orchestration Services as we did in Exercise 2. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ae0aceeb",
+   "id": "0e9cccf4",
    "metadata": {},
    "source": [
-    "> 🟨 **TODO:**  \n",
-    "> _Add Prompt_"
+    "## Use the data repository to ground the response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6135cb3b",
+   "metadata": {},
+   "source": [
+    "### Assign the model you want to use "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd89194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gen_ai_hub.orchestration.models.llm import LLM\n",
+    "\n",
+    "llm = LLM(\n",
+    "    name=\"gemini-2.5-flash\",\n",
+    "    parameters={\n",
+    "        'temperature': 0.0,\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9d74e69",
+   "metadata": {},
+   "source": [
+    "### Create a prompt Template\n",
+    "\n",
+    "This time we would like to question answered that are related to SAP TechEd 2025 and the mascot Kasimir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81a44414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gen_ai_hub.orchestration.models.template import Template\n",
+    "from gen_ai_hub.orchestration.models.message import SystemMessage, UserMessage\n",
+    "\n",
+    "template = Template(\n",
+    "            messages=[\n",
+    "                SystemMessage(\"You are a helpful SAP TechEd assistant.\"),\n",
+    "                UserMessage(\"\"\"Answer the request by providing relevant answers that fit to the request.\n",
+    "                Request: {{ ?user_query }}\n",
+    "                Context:{{ ?grounding_response }}\n",
+    "                \"\"\"),\n",
+    "            ]\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d678d986",
+   "metadata": {},
+   "source": [
+    "### Define the data repository\n",
+    "We need again configure the Grounding Module, where we first again the data repository that we want to use via the **filter** parameter. \n",
+    "Will use our repository that we created via the Pipeline API. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fac638e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gen_ai_hub.orchestration.models.document_grounding import DocumentGroundingFilter\n",
+    "from gen_ai_hub.orchestration.models.document_grounding import DataRepositoryType\n",
+    "filters = [\n",
+    "            DocumentGroundingFilter(    id=\"KasimirTechEd2025\", \n",
+    "                                        data_repository_type= DataRepositoryType.VECTOR.value,\n",
+    "                                        data_repositories=[\"50beb7ac-de7d-4127-b74b-3515146cbdea\"]) # replace <data_repository_type> by \"help.sap.com\"\n",
+    "        ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22d03f69",
+   "metadata": {},
+   "source": [
+    "### Create Grounding Configuration\n",
+    "Next we create the grounding configuration by using **GroundingModule** for managing and applying grounding configurations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd23722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from gen_ai_hub.orchestration.models.document_grounding import GroundingModule\n",
+    "from gen_ai_hub.orchestration.models.document_grounding import GroundingType\n",
+    "from gen_ai_hub.orchestration.models.document_grounding import DocumentGrounding\n",
+    "\n",
+    "grounding_config = GroundingModule(\n",
+    "            type=GroundingType.DOCUMENT_GROUNDING_SERVICE.value,\n",
+    "            config=DocumentGrounding(input_params=[\"user_query\"], output_param=\"grounding_response\", filters=filters)\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc4b440",
+   "metadata": {},
+   "source": [
+    "### Create orchestration configuration including Grounding Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59768f69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gen_ai_hub.orchestration.models.config import OrchestrationConfig\n",
+    "\n",
+    "config = OrchestrationConfig(\n",
+    "    template=template,\n",
+    "    llm=llm,\n",
+    "    grounding=grounding_config\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8681498e",
+   "metadata": {},
+   "source": [
+    "### Execute the  Query\n",
+    "Configuration will be added again to the OrchestrationService and then we run to retrieve the answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2fa2db1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import importlib\n",
+    "import variables\n",
+    "from gen_ai_hub.orchestration.models.template import TemplateValue\n",
+    "from gen_ai_hub.orchestration.service import OrchestrationService\n",
+    "\n",
+    "variables = importlib.reload(variables)\n",
+    "\n",
+    "orchestration_service = OrchestrationService(\n",
+    "    api_url=variables.AICORE_ORCHESTRATION_DEPLOYMENT_URL,\n",
+    "    config=config\n",
+    ")\n",
+    "\n",
+    "response = orchestration_service.run(\n",
+    "    template_values=[\n",
+    "        TemplateValue( \n",
+    "            name=\"user_query\",\n",
+    "            value=\"Does Kasimir like dogs?\"\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(response.orchestration_result.choices[0].message.content)"
    ]
   }
  ],
