Add configuration for object store

--- a/exercises/ex3-3-grounding-data-pipeline.ipynb
+++ b/exercises/ex3-3-grounding-data-pipeline.ipynb
@@ -326,7 +326,7 @@
     "filters = [\n",
     "            DocumentGroundingFilter(    id=\"KasimirTechEd2025\", \n",
     "                                        data_repository_type= DataRepositoryType.VECTOR.value,\n",
-    "                                        data_repositories=[\"50beb7ac-de7d-4127-b74b-3515146cbdea\"]) # replace <data_repository_type> by \"help.sap.com\"\n",
+    "                                        data_repositories=[\"50beb7ac-de7d-4127-b74b-3515146cbdea\"])\n",
     "        ]"
    ]
   },
