chore: fix typo

--- a/exercises/ex3-3-grounding-data-pipeline.ipynb
+++ b/exercises/ex3-3-grounding-data-pipeline.ipynb
@@ -525,7 +525,7 @@
    "outputs": [],
    "source": [
     "from gen_ai_hub.document_grounding.client import RetrievalAPIClient\n",
-    "retrieval_api_client = RetrievalAPIClient(aicore_client)\n",
+    "retrieval_api_client = RetrievalAPIClient()\n",
     "\n",
     "repos = retrieval_api_client.get_data_repositories()\n",
     "\n",
